[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 12.0
offset_top = 10.0
offset_right = 170.0
offset_bottom = 34.0
text = "Score: 0"

[node name="BestLabel" type="Label" parent="."]
offset_left = 12.0
offset_top = 34.0
offset_right = 170.0
offset_bottom = 58.0
text = "Best: 0"

[node name="HeatBar" type="ProgressBar" parent="."]
offset_left = 12.0
offset_top = 64.0
offset_right = 220.0
offset_bottom = 86.0
max_value = 100.0
value = 0.0

[node name="OverheatLabel" type="Label" parent="."]
offset_left = 228.0
offset_top = 62.0
offset_right = 360.0
offset_bottom = 88.0
text = "OVERHEATED"
visible = false

[node name="GameOverLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -20.0
offset_right = 128.0
offset_bottom = 20.0
text = "GAME OVER - Press R"
horizontal_alignment = 1
visible = false
